@@ -5,7 +5,7 @@
   <meta http-equiv="content-type" content="text/html; charset=US-ASCII">
   <meta name="author" content="Rob Hamerling">
   <meta name="description" content="Jallib Device File Users Guide">
-  <meta name="copyright" content="Copyright (c) Rob Hamerling 2008..2009, All rights reserved">
+  <meta name="copyright" content="Copyright (c) Rob Hamerling 2008..2010, All rights reserved">
   <meta name="project" content="This file is part of jallib  http://jallib.googlecode.com">
   <meta name="license" content="Released under the BSD license"
                              "http://www.opensource.org/licenses/bsd-license.php">
@@ -44,6 +44,7 @@
      <li><a href="#ANSELregs">ANSEL</a>
      <li><a href="#ADCregs">ADC</a>
      <li><a href="#EUSARTregs">[E]USART</a>
+     <li><a href="#multi_modules">Multiple SPI or I2C modules</a>
      <li><a href="#TIMERregs">Timers</a>
      <li><a href="#RTCCregs">RTCC</a>
      <li><a href="Status_Shadow">Shadow STATUS</a>
@@ -60,7 +61,7 @@
 <h1><a name="intro">1. Introduction</a></h1>
 
 <p>The Jallib device files are generated by means of a Rexx script 'dev2jal'.
-Its name as an abbreviation of 'MPLAB .dev to .jal' because it uses the .dev
+Its name is an abbreviation of 'MPLAB .dev to .jal' because it uses the .dev
 files of the MPLAB-IDE to create the Jallib device files.
 <br>Notes:
 <ul>
@@ -150,19 +151,21 @@ by default analog to digital I/O: enable_digital_io().
 than their specifications in the datasheet.
 You can find the default configuration bits settings in the top of the
 device file.
+<b>Never trust defaults!</b>
+Always specify the way you want the configuration bits.
 
 <h2><a name="chipdef_jallib">Common Include File 'chipdef_jallib.jal'</a></h2>
 
 <p>The file 'chipdef_jallib.jal' which comes with these device files
 replaces the file 'chipdef.jal' which comes with the compiler distribution.
-It is included by each of the device files and contains:
+It is included by every device file and contains:
 <ul>
 <li>Constants required by the compiler.
 <li>Commonly used constants by the device files and other libraries.
 </ul>
 
 <p>With the statement 'pragma target chip = .....' in every device file the
-compiler assigns a unique value to the variable 'target_chip'.
+compiler assigns a unique value to the constant 'target_chip'.
 The program may reference this variable with a symbolic name.
 This symbolic name consists of 'pic_' followed by the type of the PIC,
 which makes it possible to use the same source file to generate a hex file
@@ -435,11 +438,12 @@ programs to use statements like:
 </pre>
 To make this possible the device files contain pseudo variables which mimic
 the existence of memory mapped registers.
-<p>For example even though a 16F59 has no addressable TRISC register,
+<p>For example even though a 16F509 has no addressable TRISA register,
 you can still specify:
 <pre>
-   pin_C5_direction = output
+   pin_A5_direction = output
 </pre>
+to make pin_A5 (alias of pin_GP5) an output pin.
 
 <p>Some PICs of the 18F series have SFRs which are only accessible when
 the ADSHR bit in WDTCON is set (when not set a different SFR is accessed).
@@ -696,6 +700,48 @@ a single serial interface can use the register and field names without
 suffix for the only USART or the first of two USARTs.
 Libraries supporting two serial interfaces will preferrably use the
 qualified names (with suffix).
+
+
+<h3><a name="multi_modules">Multiple SPI or I2C Modules</a></h3>
+<p>Like multiple USARTs PICs can have other multiple peripheral modules
+like SPI and I2C.
+With multiple modules of the same type the related pins have names with
+a suffix ('1' or '2'), while with a single module the pin names have no
+suffix.
+Currently the libraries for SPI and I2C support only a single module and
+use pin names without suffix.
+To make it possible to use these libraries for the first of both modules
+the related pins with suffix '1' have been given an extra alias name
+without suffix.
+<ul>
+<li>For PICS with 2 SPI modules:
+  <pre>
+  alias pin_SDI           is &lt;pin_SDI1&gt;
+  alias pin_SDO           is &lt;pin_SDO1&gt;
+  alias pin_SCK           is &lt;pin_SCK1&gt;
+  alias pin_SS            is &lt;pin_SS1&gt;
+  alias pin_SDI_direction is &lt;pin_SDI1_direction&gt;
+  alias pin_SDO_direction is &lt;pin_SDO1_direction&gt;
+  alias pin_SCK_direction is &lt;pin_SCK1_direction&gt;
+  alias pin_SS_direction  is &lt;pin_SS1_direction&gt;
+  </pre>
+<li>For PICS with 2 I2C modules:
+  <pre>
+  alias pin_SDA           is &lt;pin_SDA1&gt;
+  alias pin_SCL           is &lt;pin_SCL1&gt;
+  alias pin_SDA_direction is &lt;pin_SDA1_direction&gt;
+  alias pin_SCL_direction is &lt;pin_SCL1_direction&gt;
+  </pre>
+</ul>
+Note: In the device files the extra aliases refer to the original 'real'
+pins (are not aliases of an aliases), hence the notation
+&lt;pin_xxxx&gt; above!
+For example a device file might contain:
+<pre>
+  alias      pin_SDI1       is pin_C4
+  alias      pin_SDI        is pin_C4
+</pre>
+and similar definitions for the other pins.
 
 
 <h3><a name="TIMERregs">Names of Timer fields</a></h3>
@@ -1298,6 +1344,7 @@ pragma target CP R0F00_0FFF
 how many words or bytes and their corresponding memory addresses.
 Also a default fuse setting is specified, which may or may not be
 suitable for your application!
+<b>Never trust defaults!</b>
 </ol>
 
 <h2>Alternate ways to specify configuration bits</h2>
@@ -1493,7 +1540,7 @@ The generated device files will be in subdirectory 'test' (./test).
 
 <h2>To do after a fresh install of MPLAB</h2>
 <p>When generating Jallib device files after a fresh install of MPLAB
-the following corrections have to be made by 'manual' editing of the
+the following corrections may have to be made by 'manual' editing of the
 MPLAB .dev files of the indicated PICs:
 <ul>
 <li>10F200,202,204,206:
@@ -1512,6 +1559,8 @@ MPLAB .dev files of the indicated PICs:
     <br>Rename IOSCFS values: Enabled to 8MHz, Disabled to 4MHz
 <li>16F526:
     Add individual pin widths of PORTB and PORTC when missing
+<li>16F/LF720/721
+    Device IDs: 16f720=2C00 16f721=2C20, 16LF720=2C40 16LF721=2C60
 <li>16F87:
     <br>Change text of several cfgbits settings:
     <ul>
@@ -1534,7 +1583,7 @@ before running the dev2jal script:
     extract_pininfos.py to obtain an up-to-date pinmap_pinsuffix.json.
 </ul>
 Now run the dev2jal script, redirect the output to a file and check
-this file for errors, warnings which needs attention.
+this file for errors and warnings which needs attention.
 <ul>
 <li>Add support for unrecognised Fuse_Def keywords to the dev2jal script.
 <li>Probably the script file 'fusedefmap.cmd' needs to be updated
