@@ -10,6 +10,9 @@ device files:
  - Added 'a' suffic to otherwise duplicate chip identifiers in chipdef_jallib.jal
  - Released 16 more PICs of 18f47j13 and 18f47j53 family (incl LF variants)
  - Released 6 more PICs of 18f87k22 family
+ - Added (untested) device files for 16f1825/29 and LF variants
+ - Added aliases for first of multiple SPI and I2C modules to be able to use
+   current SPI and I2C libraries with the first module.
 
 externals:
  -
@@ -24,7 +27,7 @@ filesystem:
  -
 
 samples:
- - Released blink samples for new device files.
+ - Released blink samples for new or newly released device files.
 
 compiler:
  -
